out/old/manifests/otm/Deployment.otm-be.yaml
metadata:
  name: otm-be
  namespace: otm
  labels:
    app.kubernetes.io/instance: otm-be
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<CLEANUP_IP_10>"],"port":31080,"protocol":"TCP","serviceName":"otm:otm-be","allNodes":true},{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"otm:otm-be","ingressName":"otm:otm-be","hostname":"otmbe.<COMPANY_DOMAIN>","path":"/","allNodes":false}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otm-be
  template:
    metadata:
      labels:
        app: otm-be
    spec:
      containers:
      - name: otm-be
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/otm/prd/be:22
        ports:
        - containerPort: 1080
          protocol: TCP
        resources:
          limits:
            cpu: '4'
            memory: 4Gi
          requests:
            cpu: '2'
            memory: 2Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: secret-registry-image
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
apiVersion: apps/v1
kind: Deployment
