out/old/manifests/otm/StatefulSet.mysql.yaml
metadata:
  name: mysql
  namespace: otm
  annotations: {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
      - name: conf
        emptyDir: {}
      - name: config-map
        configMap:
          name: mysql
          defaultMode: 420
      containers:
      - name: mysql
        image: <COMPANY>-<DOMAIN_607>/otm/base-images/mysql:5.6
        ports:
        - name: mysql
          containerPort: 3306
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - name: data-3
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        livenessProbe:
          exec:
            command:
            - bash
            - -c
            - 'set -ex

              mysqladmin -uroot -p$MYSQL_ROOT_PASSWORD ping &> /dev/null

              '
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      - name: xtrabackup
        image: <COMPANY>-<DOMAIN_607>/otm/base-images/gcr.io/google-samples/xtrabackup:1.0
        command:
        - bash
        - -c
        - "set -ex\ncd /var/lib/mysql\n\n# Determine binlog position of cloned data,\
          \ if any.\nif [[ -f xtrabackup_slave_info ]]; then\n  # XtraBackup already\
          \ generated a partial \"CHANGE MASTER TO\" query\n  # because we're cloning\
          \ from an existing slave.\n  mv xtrabackup_slave_info change_master_to.<DOMAIN_756>\n\
          \  # Ignore xtrabackup_binlog_info in this case (it's useless).\n  rm -f\
          \ xtrabackup_binlog_info\nelif [[ -f xtrabackup_binlog_info ]]; then\n \
          \ # We're cloning directly from master. Parse binlog position.\n  [[ `cat\
          \ xtrabackup_binlog_info` =~ ^(.*?)[[:space:]]+(.*?)$ ]] || exit 1\n  rm\
          \ xtrabackup_binlog_info\n  echo \"CHANGE MASTER TO MASTER_LOG_FILE='${BASH_REMATCH[1]}',\\\
          \n        MASTER_LOG_POS=${BASH_REMATCH[2]}\" > change_master_to.<DOMAIN_756>\n\
          fi\n\n# Check if we need to complete a clone by starting replication.\n\
          if [[ -f change_master_to.<DOMAIN_756> ]]; then\n  echo \"Waiting for mysqld\
          \ to be ready (accepting connections)\"\n  until mysql -h 127.0.0.1 -uroot\
          \ -p$MYSQL_ROOT_PASSWORD -e \"SELECT 1\"; do sleep 1; done\n\n  echo \"\
          Initializing replication from clone position\"\n  # In case of container\
          \ restart, attempt this at-most-once.\n  mv change_master_to.<DOMAIN_756>\
          \ change_master_to.<DOMAIN_757>\n  mysql -h 127.0.0.1 -uroot -p$MYSQL_ROOT_PASSWORD\
          \ <<EOF\n$(<change_master_to.<DOMAIN_757>),\n  MASTER_HOST='<DOMAIN_758>',\n\
          \  MASTER_USER='root',\n  MASTER_PASSWORD=$MYSQL_ROOT_PASSWORD,\n  MASTER_CONNECT_RETRY=10;\n\
          START SLAVE;\nEOF\nfi\n\n# Start a server to send backups when requested\
          \ by peers.\nexec ncat --listen --keep-open --send-only --max-conns=1 3307\
          \ -c \\\n  \"xtrabackup --backup --slave-info --stream=xbstream --host=127.0.0.1\
          \ --user=root\"\n"
        ports:
        - name: xtrabackup
          containerPort: 3307
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: data-3
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: registrypullsecret
      schedulerName: default-scheduler
  volumeClaimTemplates:
  - kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: data-3
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 30Gi
      storageClassName: ceph-block-replica-2
      volumeMode: Filesystemsu
  serviceName: mysql
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
apiVersion: apps/v1
kind: StatefulSet
