out/old/manifests/otm/Service.mysql-prd.yaml
metadata:
  name: mysql-prd
  namespace: otm
  labels:
    app: mysql
  annotations: {}
spec:
  ports:
  - name: mysql
    protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: mysql
  clusterIP: None
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
