out/old/manifests/otm/Service.mysql-read.yaml
metadata:
  name: mysql-read
  namespace: otm
  labels:
    app: mysql
  annotations: {}
spec:
  ports:
  - name: mysql
    protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: mysql
  clusterIP: <IP_93>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
