out/old/manifests/otm/Ingress.otm-be.yaml
metadata:
  name: otm-be
  namespace: otm
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"otm:otm-be","ingressName":"otm:otm-be","hostname":"otmbe.<COMPANY_DOMAIN>","path":"/","allNodes":false}]'
spec:
  ingressClassName: nginx
  rules:
  - host: otmbe.<COMPANY_DOMAIN>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otm-be
            port:
              number: 1080
apiVersion: <DOMAIN_775>/v1
kind: Ingress
